#2 Confluence catalina opts now normalized and replaceable.